# LivingRoomCam

./: .gitignore  MAC_GITHUB_SETUP.md  MAC_SETUP.md  README.md  claude.md  pyproject.toml
config/: pi-agent.local.json  server.local.json
deploy/: com.livingroomcam.server.plist  livingroomcam-agent.service
scripts/: bootstrap-mac.sh  bootstrap-pi.sh  run-agent.sh  run-server.sh
src/livingroomcam/: agent.py  config.py  database.py  monitor.py  server.py  types.py  vision.py
static/: dashboard.html
tests/: test_config.py  test_database.py  test_monitor.py
